<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <GVL Name="GVL_CONST" Id="{1079a86b-705d-4a76-afb8-a568e41148d8}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	SW_VERSION : STRING(10) := '00.00.01';
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>